tests/NormalTests/paczka1/small_fuzzy/42998053.err
Error in line 5: pyjfX3qvk A399 19,9
Error in line 6: pyjfX3qvk A228 42,0
Error in line 2: uCGCwrF A399 43,6
